--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,33 +11,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="id.sch.smktelkom_mlg.learn.fragment1.MainActivity">
 
-    <EditText
-        android:id="@+id/editTextNama"
+    <fragment
+        android:id="@+id/fragmentInput"
+        android:name="id.sch.smktelkom_mlg.learn.fragment1.InputFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Nama"
-        android:inputType="textPersonName" />
+        tools:layout="@layout/fragment_input" />
 
-    <EditText
-        android:id="@+id/editTextUmur"
+    <fragment
+        android:id="@+id/fragmentOutput"
+        android:name="id.sch.smktelkom_mlg.learn.fragment1.OutputFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Umur"
-        android:inputType="numberSigned" />
+        tools:layout="@layout/fragment_output" />
 
-    <Button
-        android:id="@+id/buttonProses"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Proses" />
 
-    <TextView
-        android:id="@+id/textViewHasil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="32dp"
-        tools:text="Hasil" />
 </LinearLayout>
